--- a/doc/Makefile
+++ b/doc/Makefile
@@ -7,6 +7,9 @@ all: build
 build:
 	bundle exec jekyll build -b $(BASE_URL)/_site
 
+watch:
+	bundle exec jekyll build -b $(BASE_URL)/_site --watch
+
 init:
 	gem install bundle jekyll
 	bundle config set --local path 'vendor/bundle'
