Add basic module infrastructure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,12 @@ add_executable(fu
     core/hash.c
     core/format.c
     core/hash_table.c
+    core/mem_pool.c
     core/log.c
     ir/node.c
     ir/print.c
     ir/parse.c
+    ir/module.c
     driver/main.c)
 set_target_properties(fu PROPERTIES C_STANDARD 11)
 target_include_directories(fu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
