Move string pool code to its own file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(fu
     core/format.c
     core/hash_table.c
     core/mem_pool.c
+    core/string_pool.c
     core/log.c
     ir/node.c
     ir/print.c
