--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(fu
     ir/print.c
     ir/parse.c
     ir/module.c
+    ir/error_mgr.c
     ir/transform/simplify.c
     driver/main.c)
 set_target_properties(fu PROPERTIES C_STANDARD 11)
