Implement more simplification rules

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,9 @@ add_executable(fu
 set_target_properties(fu PROPERTIES C_STANDARD 11 C_EXTENSIONS OFF)
 target_include_directories(fu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(fu PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+
+include(CheckLibraryExists)
+check_library_exists(m sin "" HAS_LIBM)
+if (HAS_LIBM)
+    target_link_libraries(fu m)
+endif ()
