Move `simplify.c` out of the `transform/` subdirectory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ add_executable(fu
     ir/parse.c
     ir/module.c
     ir/error_mgr.c
-    ir/transform/simplify.c
+    ir/simplify.c
     driver/main.c)
 set_target_properties(fu PROPERTIES C_STANDARD 11 C_EXTENSIONS OFF)
 target_include_directories(fu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
