--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,1 @@
-add_executable(fu
-    core/alloc.c
-    core/hash.c
-    core/format.c
-    core/hash_table.c
-    core/mem_pool.c
-    core/str_pool.c
-    core/log.c
-    core/utils.c
-    lang/lexer.c
-    driver/main.c)
-
-target_include_directories(fu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(fu PROPERTIES
-    C_STANDARD 11
-    C_EXTENSIONS OFF
-    INTERPROCEDURAL_OPTIMIZATION_RELEASE ON
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-
-include(CheckLibraryExists)
-check_library_exists(m sin "" HAS_LIBM)
-if (HAS_LIBM)
-    target_link_libraries(fu m)
-endif ()
+add_subdirectory(fu)
