Make `fu` a library

--- a/src/fu/CMakeLists.txt
+++ b/src/fu/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(fu
+add_library(libfu
     core/alloc.c
     core/hash.c
     core/format.c
@@ -9,22 +9,29 @@ add_executable(fu
     core/utils.c
     lang/lexer.c
     lang/parser.c
-    lang/ast.c
-    driver/main.c)
+    lang/ast.c)
 
-target_include_directories(fu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
-set_target_properties(fu PROPERTIES
+add_executable(fu driver/main.c)
+
+target_include_directories(libfu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+set_target_properties(fu libfu PROPERTIES
     C_STANDARD 11
     C_EXTENSIONS OFF
+    PREFIX ""
     INTERPROCEDURAL_OPTIMIZATION_RELEASE ON
+    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
 if (NOT WIN32)
-    target_compile_definitions(fu PUBLIC -D_POSIX_C_SOURCE)
+    # For `isatty()` and `fileno()`
+    target_compile_definitions(libfu PRIVATE -D_POSIX_C_SOURCE)
 endif ()
 
 include(CheckLibraryExists)
 check_library_exists(m sin "" HAS_LIBM)
 if (HAS_LIBM)
-    target_link_libraries(fu m)
+    target_link_libraries(libfu PUBLIC m)
 endif ()
+
+target_link_libraries(fu PUBLIC libfu)
