Add attributes test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,3 +11,4 @@ add_single_test(literals  "parser/pass/literals.fu" --print-ast)
 add_single_test(functions "parser/pass/functions.fu" --print-ast)
 add_single_test(exprs     "parser/pass/exprs.fu" --print-ast)
 add_single_test(loops     "parser/pass/loops.fu" --print-ast)
+add_single_test(attrs     "parser/pass/attrs.fu" --print-ast)
