--- a/src/fu/CMakeLists.txt
+++ b/src/fu/CMakeLists.txt
@@ -24,7 +24,7 @@ set_target_properties(fu libfu PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
-if (NOT WIN32)
+if (UNIX AND NOT APPLE)
     # For `isatty()` and `fileno()`
     target_compile_definitions(libfu PRIVATE -D_POSIX_C_SOURCE)
 endif ()
