--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,18 +16,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{runner.workspace}}/build
+    - name: Get Meson
+      run: pip3 install meson ninja
 
-    - name: Configure CMake
-      working-directory: ${{runner.workspace}}/build
-      shell: bash # Necessary because of the $GITHUB_WORKSPACE variable
-      run: cmake -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -DBUILD_TESTING=ON -S $GITHUB_WORKSPACE
+    - name: Create Build Environment
+      run: meson setup builddir
 
     - name: Build
-      working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config ${{matrix.build-type}}
+      working-directory: ${{runner.workspace}}/builddir
+      run: meson compile
 
     - name: Test
-      working-directory: ${{runner.workspace}}/build
-      run: ctest -C ${{matrix.build-type}}
+      working-directory: ${{runner.workspace}}/builddir
+      run: meson test
