--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,8 +25,10 @@ jobs:
 
     - name: Build
       working-directory: ${{runner.workspace}}/builddir
+      shell: bash
       run: meson compile
 
     - name: Test
       working-directory: ${{runner.workspace}}/builddir
+      shell: bash
       run: meson test
