Disable type-checker for parser tests

--- a/meson.build
+++ b/meson.build
@@ -27,10 +27,10 @@ fu = executable('fu',
   link_with: libfu)
 
 root = meson.source_root()
-test('parser-pass-enums',     fu, workdir: root, args: ['--print-ast', 'test/parser/pass/enums.fu'])
-test('parser-pass-structs',   fu, workdir: root, args: ['--print-ast', 'test/parser/pass/structs.fu'])
-test('parser-pass-literals',  fu, workdir: root, args: ['--print-ast', 'test/parser/pass/literals.fu'])
-test('parser-pass-functions', fu, workdir: root, args: ['--print-ast', 'test/parser/pass/functions.fu'])
-test('parser-pass-exprs',     fu, workdir: root, args: ['--print-ast', 'test/parser/pass/exprs.fu'])
-test('parser-pass-loops',     fu, workdir: root, args: ['--print-ast', 'test/parser/pass/loops.fu'])
-test('parser-pass-attrs',     fu, workdir: root, args: ['--print-ast', 'test/parser/pass/attrs.fu'])
+test('parser-pass-enums',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/enums.fu'])
+test('parser-pass-structs',   fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
+test('parser-pass-literals',  fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
+test('parser-pass-functions', fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/functions.fu'])
+test('parser-pass-exprs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
+test('parser-pass-loops',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
+test('parser-pass-attrs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
