--- a/meson.build
+++ b/meson.build
@@ -27,6 +27,12 @@ fu = executable('fu',
   link_with: libfu)
 
 root = meson.source_root()
+test('usage', fu, workdir: root, args: ['-h'], should_fail: true)
+test('missing-file', fu, workdir: root, args: [], should_fail: true)
+test('invalid-option', fu, workdir: root, args: ['--flurp'], should_fail: true)
+test('missing-option-value', fu, workdir: root, args: ['--max-errors'], should_fail: true)
+test('all-options-enabled', fu, workdir: root, args: ['--max-errors', '3', '--no-color', '--print-ast', '--no-type-check', 'test/parser/pass/empty.fu'])
+test('non-existing-file', fu, workdir: root, args: ['this-file-hopefully-does-not-exist.fu'], should_fail: true)
 test('parser-pass-enums',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/enums.fu'])
 test('parser-pass-structs',   fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
 test('parser-pass-literals',  fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
