Add tests for type-checker

--- a/meson.build
+++ b/meson.build
@@ -28,11 +28,12 @@ fu = executable('fu',
 
 root = meson.source_root()
 test('usage', fu, workdir: root, args: ['-h'], should_fail: true)
-test('missing-file', fu, workdir: root, args: [], should_fail: true)
-test('invalid-option', fu, workdir: root, args: ['--flurp'], should_fail: true)
-test('missing-option-value', fu, workdir: root, args: ['--max-errors'], should_fail: true)
-test('all-options-enabled', fu, workdir: root, args: ['--max-errors', '3', '--no-color', '--print-ast', '--no-type-check', 'test/parser/pass/empty.fu'])
-test('non-existing-file', fu, workdir: root, args: ['this-file-hopefully-does-not-exist.fu'], should_fail: true)
+test('missing-file',          fu, workdir: root, args: [], should_fail: true)
+test('invalid-option',        fu, workdir: root, args: ['--flurp'], should_fail: true)
+test('missing-option-value',  fu, workdir: root, args: ['--max-errors'], should_fail: true)
+test('all-options-enabled',   fu, workdir: root, args: ['--max-errors', '3', '--no-color', '--print-ast', '--no-type-check', 'test/parser/pass/empty.fu'])
+test('non-existing-file',     fu, workdir: root, args: ['this-file-hopefully-does-not-exist.fu'], should_fail: true)
+
 test('parser-pass-enums',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/enums.fu'])
 test('parser-pass-structs',   fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
 test('parser-pass-literals',  fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
@@ -40,3 +41,16 @@ test('parser-pass-functions', fu, workdir: root, args: ['--no-type-check', '--pr
 test('parser-pass-exprs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
 test('parser-pass-loops',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
 test('parser-pass-attrs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
+test('parser-pass-structs',   fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
+test('parser-pass-literals',  fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
+test('parser-pass-functions', fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/functions.fu'])
+test('parser-pass-exprs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
+test('parser-pass-loops',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
+test('parser-pass-attrs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
+
+test('parser-fail-empty-type-params', fu, workdir: root, should_fail: true, args: ['--no-type-check', '--print-ast', 'test/parser/fail/empty_enum.fu'])
+test('parser-fail-empty-enum',        fu, workdir: root, should_fail: true, args: ['--no-type-check', '--print-ast', 'test/parser/fail/empty_type_params.fu'])
+
+test('typechecker-pass-mono-structs', fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_structs.fu'])
+test('typechecker-pass-poly-structs', fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_structs.fu'])
+
