--- a/test/meson.build
+++ b/test/meson.build
@@ -29,7 +29,10 @@ test('parser-fail-empty-enum',        fu, workdir: root, should_fail: true, args
 # Typechecker tests
 test('typechecker-pass-mono-structs',        fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_structs.fu'])
 test('typechecker-pass-poly-structs',        fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_structs.fu'])
+test('typechecker-pass-mono-enums',          fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_enums.fu'])
+test('typechecker-pass-poly-enums',          fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_enums.fu'])
 test('typechecker-pass-tuple-like-structs',  fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/tuple_like_structs.fu'])
+
 test('typechecker-fail-type-access-enum',    fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/type_access_enum.fu'])
 test('typechecker-fail-type-access-struct',  fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/type_access_struct.fu'])
 test('typechecker-fail-value_access-struct', fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/value_access_struct.fu'])
