Implement basic module functionality

--- a/test/meson.build
+++ b/test/meson.build
@@ -9,35 +9,41 @@ test('non-existing-file',     fu, workdir: root, should_fail: true, args: ['this
 test('all-options-enabled',   fu, workdir: root, args: ['--max-errors', '3', '--no-color', '--print-ast', '--no-type-check', 'test/parser/pass/empty.fu'])
 
 # Parser tests
-test('parser-pass-enums',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/enums.fu'])
-test('parser-pass-structs',   fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
-test('parser-pass-literals',  fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
-test('parser-pass-functions', fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/functions.fu'])
-test('parser-pass-exprs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
-test('parser-pass-loops',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
-test('parser-pass-attrs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
-test('parser-pass-structs',   fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
-test('parser-pass-literals',  fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
-test('parser-pass-functions', fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/functions.fu'])
-test('parser-pass-exprs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
-test('parser-pass-loops',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
-test('parser-pass-attrs',     fu, workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
+test('pass-enums',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/enums.fu'])
+test('pass-structs',   fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
+test('pass-literals',  fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
+test('pass-functions', fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/functions.fu'])
+test('pass-exprs',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
+test('pass-loops',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
+test('pass-attrs',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
+test('pass-structs',   fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/structs.fu'])
+test('pass-literals',  fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/literals.fu'])
+test('pass-functions', fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/functions.fu'])
+test('pass-exprs',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/exprs.fu'])
+test('pass-loops',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/loops.fu'])
+test('pass-attrs',     fu, suite: 'parser', workdir: root, args: ['--no-type-check', '--print-ast', 'test/parser/pass/attrs.fu'])
 
-test('parser-fail-empty-type-params', fu, workdir: root, should_fail: true, args: ['--no-type-check', '--print-ast', 'test/parser/fail/empty_enum.fu'])
-test('parser-fail-empty-enum',        fu, workdir: root, should_fail: true, args: ['--no-type-check', '--print-ast', 'test/parser/fail/empty_type_params.fu'])
+test('fail-empty-type-params', fu, suite: 'parser', workdir: root, should_fail: true, args: ['--no-type-check', '--print-ast', 'test/parser/fail/empty_enum.fu'])
+test('fail-empty-enum',        fu, suite: 'parser', workdir: root, should_fail: true, args: ['--no-type-check', '--print-ast', 'test/parser/fail/empty_type_params.fu'])
 
 # Typechecker tests
-test('typechecker-pass-mono-structs',        fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_structs.fu'])
-test('typechecker-pass-poly-structs',        fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_structs.fu'])
-test('typechecker-pass-mono-enums',          fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_enums.fu'])
-test('typechecker-pass-poly-enums',          fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_enums.fu'])
-test('typechecker-pass-tuple-like-structs',  fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/tuple_like_structs.fu'])
+test('pass-mono-structs',        fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_structs.fu'])
+test('pass-poly-structs',        fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_structs.fu'])
+test('pass-mono-enums',          fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/mono_enums.fu'])
+test('pass-poly-enums',          fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/poly_enums.fu'])
+test('pass-tuple-like-structs',  fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/tuple_like_structs.fu'])
+test('pass-struct-inheritance',  fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/struct_inheritance.fu'])
+test('pass-enum-inheritance',    fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/enum_inheritance.fu'])
+test('pass-pub-mod-members',     fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/pub_mod_members.fu'])
+test('pass-opaque-mod-members',  fu, suite: 'typechecker', workdir: root, args: ['--print-ast', 'test/typechecker/pass/opaque_mod_members.fu'])
 
-test('typechecker-fail-type-access-enum',    fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/type_access_enum.fu'])
-test('typechecker-fail-type-access-struct',  fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/type_access_struct.fu'])
-test('typechecker-fail-value_access-struct', fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/value_access_struct.fu'])
-test('typechecker-fail-bad-super-struct',    fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/bad_super_struct.fu'])
-test('typechecker-fail-bad-sub-enum',        fu, workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/bad_sub_enum.fu'])
-test('typechecker-pass-struct-inheritance',  fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/struct_inheritance.fu'])
-test('typechecker-pass-enum-inheritance',    fu, workdir: root, args: ['--print-ast', 'test/typechecker/pass/enum_inheritance.fu'])
+test('fail-type-access-enum',    fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/type_access_enum.fu'])
+test('fail-type-access-struct',  fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/type_access_struct.fu'])
+test('fail-value_access-struct', fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/value_access_struct.fu'])
+test('fail-bad-super-struct',    fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/bad_super_struct.fu'])
+test('fail-bad-sub-enum',        fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/bad_sub_enum.fu'])
+test('fail-hidden-mod-members',  fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/hidden_mod_members.fu'])
+
+test('fail-redeclared-struct-field', fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/redeclared_struct_field.fu'])
+test('fail-redeclared-enum-option',  fu, suite: 'typechecker', workdir: root, should_fail: true, args: ['--print-ast', 'test/typechecker/fail/redeclared_enum_option.fu'])
 
